Handling another testcase.